Bug 270402 - "Process Table" tab in System Monitor unclickable when menubar is hidden
Summary: "Process Table" tab in System Monitor unclickable when menubar is hidden
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 281656 287159 290756 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-08 06:03 UTC by Samu Juvonen
Modified: 2012-06-06 22:04 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samu Juvonen 2011-04-08 06:03:16 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

I am using QtCurve theme which allows one to hide menubars on various Qt and GTK+ apps. When I hide the menubar in KDE's System Monitor, the Process Table tab becomes unclickable. It just doesn't react to any mouse clicks but can switched to using Ctrl+Tab. If I set the menubar visible again, the tab becomes clickable immediately.

All the other tabs still function properly.

Reproducible: Always

Steps to Reproduce:
1. Hide the menubar (using QtCurve)
2. Try to click on the Process Table tab

Actual Results:  
No reactions

Expected Results:  
The tab should react to mouse clicks even when the menubar is hidden.

This bug occured only after upgrading to KDE SC 4.6.2.

Menubars can be forced hidden in QtCurve using keyboard shortcut Ctrl+Alt+M.
Comment 1 Christoph Feck 2011-04-08 17:41:02 UTC
Well, forcefully hiding the menu bar is a hack, and I suggest to report this to the QtCurve developers to make sure the hack works with every application.
Comment 2 Samu Juvonen 2011-04-08 17:46:14 UTC
The point is that System Monitor has some kind of an invisible thing blocking a certain area of the window. And it is most likely a bug of some sort, because there are no major changes taking place in a point release. A bug is a bug is a bug even if it doesn't have an immediate effect on how the application works.

This is also not a bug in QtCurve. I can change to any other theme whilst the menubar is hidden, and still the tab handle is not clickable.
Comment 3 Christoph Feck 2011-10-04 11:21:11 UTC
*** Bug 281656 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2011-10-04 11:22:35 UTC
There is an empty widget positioned at 0,0 that causes the bug. Trying to find it ...
Comment 5 Helder 2011-11-20 18:31:18 UTC
This bug is also happening on Ubuntu 11.04 (System Monitor Version 4.7.2 (4.7.2), Using KDE Development Platform 4.7.2), and the only way to go to the process tab is to use CTRL+Tab or to click very very close to the right border of the tab.
Comment 6 Christoph Feck 2011-11-22 23:27:01 UTC
*** Bug 287159 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2012-01-06 00:46:18 UTC
*** Bug 290756 has been marked as a duplicate of this bug. ***
Comment 8 black_painkiller 2012-01-06 10:25:08 UTC
I don't think it's related to QtCurve theme. It happens also in the standard theme with standard decoration.
seems just a text label without a Qaction connected.
Ubuntu 12.04 and KDE 4.7.95.
Comment 9 kelpdip 2012-04-05 02:38:21 UTC
This behaviour also occurs when the "Window Menubar" widget is active.
Comment 10 Craig Magina 2012-04-19 19:40:34 UTC
This is also occurring on Kubuntu 12.04 (KDE 4.8.2) with the Window Menubar widget being used.
Comment 11 Adam Porter 2012-05-15 12:39:11 UTC
This bug has been around for quite a while.  :(  Can we get a CONFIRMED, please?
Comment 12 John Tapsell 2012-06-06 22:01:50 UTC
Git commit b6fa43be9d86a577dd103dc4fa727770725e2d85 by John Tapsell.
Committed on 06/06/2012 at 21:18.
Pushed by johnflux into branch 'KDE/4.8'.

Remove second invisible ProcessTable widget that was making the process table tab unclickable

D  +0    -30   ksysguard/gui/ProcessTable.h
M  +6    -7    ksysguard/gui/WorkSheet.cpp
M  +19   -20   ksysguard/gui/ksysguard.cpp
M  +6    -0    ksysguard/gui/ksysguard.h

http://commits.kde.org/kde-workspace/b6fa43be9d86a577dd103dc4fa727770725e2d85
Comment 13 John Tapsell 2012-06-06 22:04:16 UTC
Git commit c5e896f6591271259eed04f07288745b007ce255 by John Tapsell.
Committed on 06/06/2012 at 21:18.
Pushed by johnflux into branch 'master'.

Remove second invisible ProcessTable widget that was making the process table tab unclickable

D  +0    -30   ksysguard/gui/ProcessTable.h
M  +6    -7    ksysguard/gui/WorkSheet.cpp
M  +19   -20   ksysguard/gui/ksysguard.cpp
M  +6    -0    ksysguard/gui/ksysguard.h

http://commits.kde.org/kde-workspace/c5e896f6591271259eed04f07288745b007ce255