Remove second invisible ProcessTable widget that was making the process table tab unclickable

BUG: 270402